--- a/styles/header.scss
+++ b/styles/header.scss
@@ -267,7 +267,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100px;
+  width: 125px;
   height: 40px;
   background: $red-color;
   color: #fff;
